...
    <string name="birthday">Birthday</string>
    <string name="last_name">Last name</string>
    <string name="select_date">Select date</string>
    <string name="nothig_added">Nothing added</string>
    <string name="add_birthday_for">Added birthday from %1$s</string>
    <string name="add_year">Add year</string>
    <string name="apply">apply</string>
    <string name="yyy_mm_dd">%1$d/%2$d/%3$d</string>
    <string name="mm_dd">%1$d/%2$d</string>
    <string name="title_activity_add_event">Add event</string>
    <string name="event_name">Event name</string>
    <string name="event_date">Date</string>
    <string name="on">on</string>
...
    <string name="menu_share">Share</string>
    <string name="event">Event</string>
    <string name="delete">Delete</string>
    <string name="title_activity_list_birthdays">Birthdays</string>
    <string name="settings_preferences_category_alarm">Alarm</string>
    <string name="settings_preferences_current_alarm">Current alarm</string>
    <string name="action_save">save</string>
    <string name="add_birthday_throw_away">throw away</string>
    <string name="add_birthday_ask_throw_away_modifications">Are you sure you want to throw away the changes?</string>
    <string name="add_birthday_ask_throw_away_modifications_cancel">Keep modifying</string>
    <string name="settings_preferences_app_version">App version</string>
    <string name="settings_preferences_category_about">About</string>
    <string name="countdown_layout_months">MONTHS</string>
...
